--- a/_posts/2022-01-02-MSML606.MD
+++ b/_posts/2022-01-02-MSML606.MD
@@ -16,4 +16,56 @@ toc:  true
     gtag('config', 'G-TG0XJZG53F');
   </script>
 
-## Chapter 1 Introduction
+  <style TYPE="text/css">code.has-jax {font: inherit; font-size: 100%; background: inherit; border: inherit;}</style><script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+      tex2jax: {
+          inlineMath: [['$','$'], ['\\(','\\)']],
+          displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+          skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'] // removed 'code' entry
+      }});
+  MathJax.Hub.Queue(function() {
+      var all = MathJax.Hub.getAllJax(), i;
+      for(i = 0; i < all.length; i += 1) {
+          all[i].SourceElement().parentNode.className += ' has-jax';
+      }});
+  </script><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS_HTML-full"></script>  
+
+## Week 1 Random Sampling
+
+### Discrete Probability Distribution<br/>
+
+A discrete probability distribution is a probability distribution that can take on a countable number of values. In the case where the range of values is countably infinite, these values have to decline to zero fast enough for the probabilities to add up to 1. For example, if $P(X=n)  =  \frac{1}{2^n} $ for n = 1,2,..., the sum of probabilities would be 1/2 + 1/4 + 1/8 + ... = 1
+
+Examples include the Poisson distribution, the Bernoulli distribution, and the binomial distribution.
+
+When a sample (a set of observations) is drawn from a larger population, the sample points have an empirical distribution that is discrete, and which provides information about the population distribution.
+
+### Probability Mass Function (PMF)
+
+A probability mass function (PMF) is a function that gives the probability that a discrete random variable is exactly equal to some value. Sometimes it is also known as the discrete density function.
+
+![](https://joy3luo.github.io/mathnotes/pics/MSML606/distrib.png)
+
+### Cumulative Distribution Function (CDF)
+
+A cumulative distribution function (CDF) of a random variable  X  , or just distribution function of  X , evaluated at  x , is the probability that  X  will take a value less than or equal to  x .
+
+![](https://joy3luo.github.io/mathnotes/pics/MSML606/distribution.png)
+
+### Inverse distribution function (quantile function)
+
+The quantile function, associated with a probability distribution of a random variable, specifies the value of the random variable such that the probability of the variable being less than or equal to that value equals the given probability. It is also called the percent-point function or inverse cumulative distribution function.
+
+![](https://joy3luo.github.io/mathnotes/pics/MSML606/function.png)
+
+#### Example
+
+Here is an intuitive explanation:
+
+P(Weak)=0.2 , P(Standard)=0.7, P(Strong) = 0.1
+
+![](https://joy3luo.github.io/mathnotes/pics/MSML606/1.jfif)
+
+### Continuous Probability Distribution
+
+A continuous probability distribution is a probability distribution whose support is an uncountable set, such as an interval in the real line. They are uniquely characterized by a cumulative distribution function that can be used to calculate the probability for each subset of the support. There are many examples of continuous probability distributions: normal, uniform, chi-squared, and others.
