--- a/_posts/2022-01-02-MSML605.md
+++ b/_posts/2022-01-02-MSML605.md
@@ -4982,13 +4982,16 @@ The shape of the array is a tuple of N integers (one for each dimension)
 
 Structured lists of numbers
 
-• Vectors $\begin{bmatrix} px\\ py\\ pz\end{bmatrix}$
+• Vectors $\begin{bmatrix} p_{x}\\ p_{y}\\ p_{z}\end{bmatrix}$
 
 • Matrices $\begin{bmatrix} a_{11} & ... & a_{1n}\\ ... & ... & ...\\ a_{m1} & ... & a_{mn}\end{bmatrix}$
 
 • Images
+![](https://joy3luo.github.io/mathnotes/pics/MSML605/daodao.jpg)
 
 • Tensors
+
+![](https://joy3luo.github.io/mathnotes/pics/MSML605/tensor.png)
 
 • ConvNets (Convolutional Neural Networks (CNNs))
 
