--- a/_posts/2022-01-02-MSML605.md
+++ b/_posts/2022-01-02-MSML605.md
@@ -5474,17 +5474,144 @@ array([2,12,22,32,42,52])
 array([[20, 22, 24], [40, 42, 44]])
 ```
 
-
 #### Array Slicing Examples
 
+```py
+>>> a = np.arange(10)
+>>> a
+array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])
+
+>>> a[:4]
+array([0, 1, 2, 3])
+
+>>> a[:10:2]
+array([0, 2, 4, 6, 8])
+
+>>> a[::3]
+array([0, 3, 6, 9])
+
+>>> a[2::3]
+array([2, 5, 8])
+
+>>> a[5:] = 20
+>>> a
+array([ 0,  1,  2,  3,  4, 20, 20, 20, 20, 20])
+
+>>> y = np.arange(5)
+>>> y
+array([0, 1, 2, 3, 4])
+
+>>> a[5:] = y[::-1]
+>>> a
+array([0, 1, 2, 3, 4, 4, 3, 2, 1, 0])
+
+>>> x = np.array([[10,20,30,40],[50,60,70,80],[90,100,110,120]])
+>>> x
+array([[ 10,  20,  30,  40],
+       [ 50,  60,  70,  80],
+       [ 90, 100, 110, 120]])
+
+>>> x[1,:]
+array([50, 60, 70, 80])
+
+>>> x[:2,:]
+array([[10, 20, 30, 40],
+       [50, 60, 70, 80]])
+
+>>> x[:,2]
+array([ 30,  70, 110])
+
+# Reverse rows
+>>> x[::-1,]
+array([[ 90, 100, 110, 120],
+       [ 50,  60,  70,  80],
+       [ 10,  20,  30,  40]])
+
+# Reverse columns
+>>> x[:,::-1]
+array([[ 40,  30,  20,  10],
+       [ 80,  70,  60,  50],
+       [120, 110, 100,  90]])
+
+>>> x[::-1,::-1]
+array([[120, 110, 100,  90],
+       [ 80,  70,  60,  50],
+       [ 40,  30,  20,  10]])
+```
+
+#### Infinity and NaN
+
+```py
+>>> x = np.array([[10.0,20.0,30.0,40.0],[50,60,70,80],[90,100,110,120]])
+>>> x
+array([[ 10.,  20.,  30.,  40.],
+       [ 50.,  60.,  70.,  80.],
+       [ 90., 100., 110., 120.]])
+
+>>> x[2,1] = np.nan
+>>> x[1,2] = np.inf
+>>> x
+array([[ 10.,  20.,  30.,  40.],
+       [ 50.,  60.,  inf,  80.],
+       [ 90.,  nan, 110., 120.]])
+```
+
+#### Fancy Indexing
+
+<img src="https://joy3luo.github.io/mathnotes/pics/MSML605/indexing.png" width="200">
+
+```py
+# Indexing By Position
+>>> a = np.arange(0,80,10)
+>>> a
+array([ 0, 10, 20, 30, 40, 50, 60, 70])
+
+>>> y = a[1, 2, -3] # error; too many indices
+---------------------------------------------------------------------------
+IndexError                                Traceback (most recent call last)
+Input In [86], in <cell line: 1>()
+----> 1 y = a[1, 2, -3]
+
+IndexError: too many indices for array: array is 1-dimensional, but 3 were indexed
+```
+
+```py
+# fancy indexing
+>>> y = a[[1, 2, -3]]
+>>> print (y)
+[10 20 50]
+
+# using take
+
+>>> y = np.take(a,[1,2,-3])
+>>> print (y)
+[10 20 50]
+
+# Indexing With Booleans
+
+>>> mask = np.array([0,1,1,0,0,1,0,0],
+
+... dtype=bool)
+
+# fancy indexing
+
+>>> y = a[mask]
+
+>>> print (y)
+
+[10,20,50]
+
+# using compress
+
+>>> y = np.compress(mask, a)
+
+>>> print (y)
+
+[10,20,50]
 
 
-####
 
-
-####
-
-
+```
 
 ####
 
