--- a/_posts/2022-01-02-MSML605.md
+++ b/_posts/2022-01-02-MSML605.md
@@ -5558,8 +5558,6 @@ array([[ 10.,  20.,  30.,  40.],
 
 #### Fancy Indexing
 
-<img src="https://joy3luo.github.io/mathnotes/pics/MSML605/indexing.png" width="200">
-
 ```py
 # Indexing By Position
 >>> a = np.arange(0,80,10)
@@ -5586,41 +5584,44 @@ IndexError: too many indices for array: array is 1-dimensional, but 3 were index
 >>> y = np.take(a,[1,2,-3])
 >>> print (y)
 [10 20 50]
+```
 
+<img src="https://joy3luo.github.io/mathnotes/pics/MSML605/indexing.png" width="200">
+
+```py
 # Indexing With Booleans
 
->>> mask = np.array([0,1,1,0,0,1,0,0],
-
-... dtype=bool)
+>>> mask = np.array([0,1,1,0,0,1,0,0], dtype=bool)
 
 # fancy indexing
-
 >>> y = a[mask]
-
 >>> print (y)
-
 [10,20,50]
 
 # using compress
-
 >>> y = np.compress(mask, a)
-
 >>> print (y)
-
 [10,20,50]
-
-
-
 ```
 
-####
+#### Fancy Indexing in 2D
 
+Unlike slicing, fancy indexing creates copies instead of views into original arrays
 
-
-####
+<img src="https://joy3luo.github.io/mathnotes/pics/MSML605/2d.png" width="200">
 
 ```py
+>>> a[(0,1,2,3,4),(1,2,3,4,5)]
+array([ 1, 12, 23, 34, 45])
 
+>>> a[3:,[0, 2, 5]]
+array([[30, 32, 35],
+       [40, 42, 45]])
+       [50, 52, 55]])
+
+>>> mask = array([1,0,1,0,0,1], dtype=bool)
+>>> a[mask,2]
+array([2,22,52])
 ```
 
 ####
