--- a/_posts/2022-01-02-MSML606.MD
+++ b/_posts/2022-01-02-MSML606.MD
@@ -2,7 +2,7 @@
 layout: post
 title: Algorithms for Data Science
 date: 2019-01-02 11:18 +0800
-tags: [Programming]
+tags: [MachineLearniong]
 toc:  true
 ---
 
