--- a/_posts/2018-11-2-Win10_ios.md
+++ b/_posts/2018-11-2-Win10_ios.md
@@ -3,7 +3,7 @@ layout: post
 title: Win10 和 ios 之间传输文件
 date: 2018-11-02 23:18 +0800
 tags:
-- PC
+- Other
 ---
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
