--- a/_posts/2020-08-24-java1.md
+++ b/_posts/2020-08-24-java1.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Programming - Learning Java
+title: Java - Learning Java
 date: 2020-08-24 23:18 +0800
-tags: [Programming]
+tags: [Java]
 ---
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
