--- a/_posts/2020-08-24-java1.md
+++ b/_posts/2020-08-24-java1.md
@@ -2,7 +2,7 @@
 layout: post
 title: Java - Learning Java
 date: 2020-08-24 23:18 +0800
-tags: [Java]
+tags: [java]
 ---
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
