--- a/_posts/2021-08-02-30_ML.md
+++ b/_posts/2021-08-02-30_ML.md
@@ -2,7 +2,7 @@
 layout: post
 title: Kaggle 30 Days of Machine Learning
 date: 2021-08-02 12:18 +0800
-tags: [Python]
+tags: [python]
 toc:  true
 ---
 
