--- a/_posts/2019-10-24-Latex.md
+++ b/_posts/2019-10-24-Latex.md
@@ -2,7 +2,7 @@
 layout: post
 title: LaTeX - Math symbols in LaTeX
 date: 2019-10-24 23:18 +0800
-tags: [Other]
+tags: [other]
 ---
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
