--- a/_posts/2022-01-02-MSML605.md
+++ b/_posts/2022-01-02-MSML605.md
@@ -2,7 +2,7 @@
 layout: post
 title: Computing Systems for Machine Learning
 date: 2022-01-02 12:18 +0800
-tags: [Python]
+tags: [python]
 toc:  true
 math: true
 ---
